# Android-FFmpeg

./: README.md
OpenGL-YUV/app/: build.gradle
OpenGL-YUV/app/src/main/cpp/: native-lib.cpp
OpenGL-YUV/app/src/main/java/aplay/testopengles/: MainActivity.java  XPlay.java
OpenGL-YUV/app/src/main/res/layout/: activity_main.xml
OpenGL-YUV/gradle/wrapper/: gradle-wrapper.properties
audio/app/: build.gradle
audio/app/src/androidTest/java/com/sunmi/audio/: ExampleInstrumentedTest.java
audio/app/src/main/: AndroidManifest.xml
audio/app/src/main/java/com/sunmi/audio/: MainActivity.java
audio/app/src/main/res/layout/: activity_main.xml
audio/app/src/test/java/com/sunmi/audio/: ExampleUnitTest.java
testffmpeg/: build.gradle
testffmpeg/app/: CMakeLists.txt  build.gradle
testffmpeg/app/src/androidTest/java/com/sunmi/testffmpeg/: ExampleInstrumentedTest.java
testffmpeg/app/src/main/: AndroidManifest.xml
testffmpeg/app/src/main/cpp/: native-lib.cpp
testffmpeg/app/src/main/java/com/sunmi/testffmpeg/: MainActivity.java  UsbCamera.java
testffmpeg/app/src/main/res/layout/: activity_main.xml
testffmpeg/app/src/test/java/com/sunmi/testffmpeg/: ExampleUnitTest.java
usbcam/app/: CMakeLists.txt  build.gradle
usbcam/app/src/androidTest/java/com/sunmi/player/: ExampleInstrumentedTest.java
usbcam/app/src/main/: AndroidManifest.xml
usbcam/app/src/main/cpp/: native-lib.cpp  usb_v4l2.cpp  usb_v4l2.h
usbcam/app/src/main/java/com/sunmi/player/: MainActivity.java  UsbCamera.java
usbcam/app/src/main/res/layout/: activity_main.xml
usbcam/app/src/test/java/com/sunmi/player/: ExampleUnitTest.java
xplay/app/: CMakeLists.txt  build.gradle
xplay/app/src/androidTest/java/com/sunmi/xplay/: ExampleInstrumentedTest.java
xplay/app/src/main/: AndroidManifest.xml
xplay/app/src/main/cpp/: IDecode.cpp  XTexture.cpp  native-lib.cpp
xplay/app/src/main/java/com/sunmi/xplay/: MainActivity.java  XPlay.java
xplay/app/src/main/res/layout/: activity_main.xml
xplay/app/src/main/res/values/: strings.xml
xplay/app/src/test/java/com/sunmi/xplay/: ExampleUnitTest.java
xplay/gradle/wrapper/: gradle-wrapper.properties
